--- a/src/components/UI/Card/Card.module.css
+++ b/src/components/UI/Card/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-    background: white;
+    background: rgb(243, 58, 203);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 10px;
   }
